# pathfinding-video-lab

./: .gitignore  README.md  pyproject.toml  requirements.txt
src/: __init__.py  app.py
src/algorithms/: __init__.py  astar.py  bfs.py  dfs.py  dijkstra.py  greedy_best_first.py
src/core/: __init__.py  audio.py  config.py  events.py  exporter.py  grid.py  profiles.py  render_plan.py  rendering.py  theme.py  timeline.py  video.py
src/scenarios/: __init__.py  basic.py
tests/: test_smoke.py
